# treats

./: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: publish.yml  test.yml
src/: discard.rs  inspect_none.rs  lib.rs  path.rs  permit.rs
